[package]
name = "avrogant"
description = "A toolkit to use avro schemas as rust types"
authors = ["Lucas Andreussi <lucasandreussi@gmail.com>"]
license = "MIT"
version = "0.1.9"
edition = "2024"

[features]
default = ["macro"]
macro = ["dep:avrogant_macro"]

[dependencies]
avrogant_macro = {version = "0.1.2", optional = true}
rsgen-avro.workspace = true

[dev-dependencies]
apache-avro = "0.21.0"
derive_builder = "0.20.2"
rkyv = "0.8.12"
serde.workspace = true
